--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,8 @@ LazyData: true
 Imports: 
     dplyr,
     forcats,
-    rstudioapi,
+    magrittr,
     stringr,
-    tibble,
     tidyr,
     writexl
 RoxygenNote: 7.3.3
